--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,37 @@
     tools:context=".MainActivity">
 
     <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/arFragment"
-        android:name="com.google.ar.sceneform.ux.ArFragment" />
+        android:name="com.google.ar.sceneform.ux.ArFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+<!--    <com.sothree.slidinguppanel.SlidingUpPanelLayout-->
+<!--        android:id="@+id/sliding_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:gravity="bottom"-->
+<!--        app:umanoPanelHeight="68dp"-->
+<!--        app:umanoShadowHeight="4dp">-->
+
+<!--        <fragment-->
+<!--            android:id="@+id/arFragment"-->
+<!--            android:name="com.google.ar.sceneform.ux.ArFragment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent" />-->
+<!--        <SearchView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50mm"-->
+<!--            android:gravity="top"-->
+<!--            />-->
+
+<!--&lt;!&ndash;        <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:layout_height="50mm"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:gravity="center|top"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:text="The Awesome Sliding Up Panel"&ndash;&gt;-->
+<!--&lt;!&ndash;            android:textSize="16sp" />&ndash;&gt;-->
+<!--    </com.sothree.slidinguppanel.SlidingUpPanelLayout>-->
+
 
 </RelativeLayout>
