--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,17 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/arFragment"/>
 
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="66dp"
+        android:layout_height="72dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/roundedbutton"
+        android:padding="15dp"
+        android:text="Log out"
+        android:textColor="@android:color/white" />
+
 <!--    <Button-->
 <!--        android:id="@+id/toggle_recording"-->
 <!--        android:layout_width="wrap_content"-->
