--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@mipmap/icon"
-        android:backgroundTint="#80EGFZFXP"
+        android:backgroundTint="#80FFFFFF"
         android:backgroundTintMode="src_over"
         android:gravity="center"
         android:orientation="vertical"
@@ -28,7 +28,7 @@
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
                 android:textStyle = "bold"
-                android:textSize="60px"/>
+                android:textSize="50px"/>
 
             <EditText
                 android:id="@+id/password"
@@ -40,7 +40,7 @@
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
                 android:textStyle = "bold"
-                android:textSize="60px"/>
+                android:textSize="50px"/>
         <!-- Login Button -->
 
         <Button
@@ -63,10 +63,11 @@
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@android:color/holo_blue_light"
+            android:background="@null"
             android:text="@string/btn_forgot_password"
             android:textAllCaps="false"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textStyle = "bold"/>
 
         <!-- Link to Login Screen -->
 
@@ -75,11 +76,12 @@
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@android:color/holo_blue_light"
+            android:background="@null"
             android:text="@string/btn_link_to_register"
             android:textAllCaps="false"
             android:textColor="@android:color/black"
-            android:textSize="15dp" />
+            android:textSize="15dp"
+            android:textStyle = "bold"/>
     </LinearLayout>
 
     <ProgressBar
